# nbounce

./: Cargo.toml  README.md
.cargo/: config.toml
assets/: bunny.glb  spheres.glb  test.glb  testscene.glb
src/: app.rs  backend.rs  blit.wgsl  blit_renderer.rs  bvh.rs  common.rs  fullscreen.rs  fullscreen.wgsl  fullscreen_renderer.rs  imgui_winit_support.rs  main.rs  mesh.wgsl  mesh_renderer.rs  pathtracer.rs  pathtracing.rs  pathtracing.wgsl  raytracer.rs  raytracer.wgsl  scene.rs  shader.wgsl  swraytracing.wgsl  triangle_pipeline.rs  triangle_renderer.rs  uniform_buffer.rs
src/common/: app_handler.rs  camera.rs  imgui_context.rs  mesh.rs  performance_metric.rs  texture.rs  util.rs  wgpu_context.rs
src/pathtracing/: bvh.rs  common.wgsl  envmap.rs  mesh_renderer.rs  pathtracer.rs  pathtracing.wgsl  scene.rs
