[package]
name = "pathtracer"
version = "0.1.0"
authors = ["Julian C. Stamm <mail@julcs.com>"]
edition = "2021"

[dependencies]
env_logger = "0.11.5"
glam = "0.28.0"
gltf = "1.4.1"
image = "0.25.2"
imgui = "0.12.0"
imgui-wgpu = "0.24.0"
log = "0.4.22"
pollster = "0.3.0"
pretty_env_logger = "0.5.0"
wgpu = "0.20.1"
winit = "0.30.4"

[patch.crates-io]
imgui-wgpu = { git = "https://github.com/benmkw/imgui-wgpu-rs.git", branch = "wgpu020" }
